# tauri-revanced

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  LICENSE_MIT  README.md  dependabot.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tauri-revanced.code-workspace
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: bench.yml  lint-cli.yml  lint-core.yml  supply-chain.yml  test-cli-js.yml  test-cli-rs.yml  test-core.yml  test-lint-bundler.yml  udeps.yml
.scripts/: update-lockfiles.sh
api.js/: package.json  rollup.config.ts  tsconfig.json
api.js/src/: app.ts  core.ts  dpi.ts  event.ts  global.d.ts  image.ts  index.ts  menu.ts  mocks.ts  path.ts  tray.ts  webview.ts  webviewWindow.ts  window.ts
api.js/src/menu/: base.ts  checkMenuItem.ts  iconMenuItem.ts  menu.ts  menuItem.ts  predefinedMenuItem.ts  submenu.ts
cli/: Cargo.toml
cli/src/: main.rs
cli/src/bundler/: bundle.rs  error.rs  mod.rs
cli/src/bundler/bundle/: category.rs  common.rs  path_utils.rs  platform.rs  settings.rs  updater_bundle.rs
cli/src/bundler/bundle/linux/: appimage.rs  freedesktop.rs  mod.rs
cli/src/bundler/bundle/macos/: app.rs  sign.rs
cli/src/commands/bundle/: mod.rs
cli/src/commands/bundle/linux/: appimage.rs  mod.rs
cli/src/commands/bundle/macos/: mod.rs
cli/src/commands/bundle/windows/: mod.rs  msix.rs
clitemp/: Cargo.toml  ENVIRONMENT_VARIABLES.md  README.md
clitemp/src/: build.rs  dev.rs  icon.rs  init.rs  lib.rs  main.rs
clitemp/src/bundler/: bundle.rs  error.rs  mod.rs
clitemp/src/bundler/bundle/: category.rs  common.rs  path_utils.rs  platform.rs  settings.rs  updater_bundle.rs
clitemp/src/bundler/bundle/linux/: appimage.rs  debian.rs  freedesktop.rs  mod.rs
clitemp/src/bundler/bundle/macos/: dmg.rs  icon.rs  ios.rs
clitemp/src/helpers/: cargo.rs  config.rs
clitemp/src/interface/: mod.rs  rust.rs
clitemp/src/interface/rust/: manifest.rs
clitemp/src/mobile/android/: dev.rs
clitemp/src/mobile/ios/: dev.rs
clitemp/src/plugin/: init.rs
core/tauri/: Cargo.toml  README.md
core/tauri-build/: Cargo.toml
core/tauri-build/src/: lib.rs
core/tauri-codegen/: README.md
core/tauri-config-schema/src/: main.rs
core/tauri-runtime/: README.md
core/tauri-runtime-wry/: README.md
core/tauri-runtime/src/: lib.rs
core/tauri-utils/src/: lib.rs
core/tauri/src/: lib.rs
crates/tauri/: build.rs
crates/tauri-build/: README.md
crates/tauri-build/src/: acl.rs  lib.rs  manifest.rs  mobile.rs  static_vcruntime.rs
crates/tauri-build/src/codegen/: context.rs
crates/tauri-codegen/src/: context.rs  embedded_assets.rs  lib.rs
crates/tauri-config-schema/: build.rs
crates/tauri-config-schema/src/: main.rs
crates/tauri-macros/: README.md
crates/tauri-macros/src/: context.rs  lib.rs  menu.rs  mobile.rs  runtime.rs
crates/tauri-macros/src/command/: handler.rs  mod.rs  wrapper.rs
crates/tauri-plugin/src/: lib.rs
crates/tauri-runtime-wry/: build.rs
crates/tauri-runtime-wry/src/: lib.rs  undecorated_resizing.rs  webview.rs
crates/tauri-runtime/src/: lib.rs  monitor.rs  webview.rs  window.rs
crates/tauri-utils/: README.md
crates/tauri-utils/src/: assets.rs  build.rs  config.rs  html.rs  io.rs  lib.rs  mime_type.rs  platform.rs  plugin.rs  resources.rs  tokens.rs
crates/tauri-utils/src/acl/: build.rs  capability.rs  identifier.rs  manifest.rs  mod.rs  resolved.rs  value.rs
crates/tauri-utils/src/config/: parse.rs
crates/tauri-utils/src/pattern/: isolation.js  isolation.rs  mod.rs
crates/tauri-utils/src/platform/: starting_binary.rs
crates/tauri/mobile/android/: build.gradle.kts
crates/tauri/mobile/android-codegen/: TauriActivity.kt
crates/tauri/mobile/ios-api/: Package.swift
crates/tauri/scripts/: core.js  freeze_prototype.js  init.js  ipc-protocol.js  ipc.js  isolation.js  pattern.js  process-ipc-message-fn.js
crates/tauri/src/: app.rs  async_runtime.rs  error.rs  ios.rs  lib.rs  pattern.rs  plugin.rs  process.rs  state.rs
crates/tauri/src/app/: plugin.rs
crates/tauri/src/event/: listener.rs  mod.rs  plugin.rs
crates/tauri/src/image/: mod.rs  plugin.rs
examples/api/: README.md  package.json  vite.config.js
examples/api/src-tauri/: Cargo.toml  tauri.conf.json
examples/file-associations/src-tauri/: Cargo.toml
examples/isolation/: main.rs  tauri.conf.json
examples/multiwebview/: main.rs  tauri.conf.json
tooling/api/: README.md
tooling/bundler/: Cargo.toml
tooling/bundler/src/: lib.rs
tooling/cli/: Cargo.toml  schema.json
tooling/cli/node/: README.md
tooling/cli/src/: lib.rs
(+83 files in other folders)
