[workspace]
resolver = "2"
members = [
  "crates/*",
  "cli",
]

exclude = [
  # examples that should be compiled with the tauri CLI
  "examples/api/src-tauri",
  "examples/file-associations/src-tauri",
]

[workspace.package]
authors = ["Tauri Programme within The Commons Conservancy", "FabianLars"]
homepage = "https://github.com/FabianLars/tauri-revanced"
repository = "https://github.com/FabianLars/tauri-revanced"
categories = ["gui", "web-programming"]
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.77.2"

[profile.optimized]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
