[package]
name = "cli"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-utils = {path="../crates/tauri-utils"}

anyhow = "1"
glob = "0.3"
handlebars = "5"
hex = "0"
image = "0.25"
log = {version="0.4",features=["kv"]}
os_pipe = "1"
regex = "1"
serde = "1"
serde_json = "1"
strsim = "0.11"
tempfile = "3"
thiserror = "1"
ureq = "2"
walkdir = "2"
zip = "0.6"
