[package]
name = "cli"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
# intentional typo
name = "cargo-tuari"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
cargo_metadata = "0.18.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
clap-cargo = "0.14.0"
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
human-panic = "2.0.0"
log = "0.4.21"
