[package]
name = "cli"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "cargo-tauri"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7.4", features = [ "ws" ] }
base64 = "0.22.0"
cargo-mobile2 = { version = "0.11", default-features = false }
clap = { version = "4.5", features = [ "derive", "env" ] }
clap_complete = "4"
colored = "2.1"
common-path = "1"
css-color = "0.2"
ctrlc = "3"
dialoguer = "0.11"
dirs = "5"
duct = "0.13"
dunce = "1"
env_logger = "0.11"
flate2 = "1"
glob = "0.3"
handlebars = "5"
heck = "0.5"
hex = "0"
html5ever = "0.26"
icns = { package = "tauri-icns", version = "0.1" }
ignore = "0.4"
image = { version = "0.25", default-features = false, features = [ "ico" ] }
include_dir = "0.7"
itertools = "0.12"
json-patch = "1"
jsonrpsee = { version = "0.22", features = [ "server" ] }
jsonrpsee-client-transport = { version = "0.22", features = [ "ws" ] }
jsonrpsee-core = "0.22"
jsonrpsee-ws-client = { version = "0.22", default-features = false }
jsonschema = "0.17"
kuchiki = { package = "kuchikiki", version = "0.8" }
local-ip-address = "0.6"
log = { version = "0.4.21", features = [ "kv", "kv_std" ] }
md5 = "0.7"
minisign = "=0.7.3"
notify = "6"
notify-debouncer-mini = "0.4"
os_info = "3"
os_pipe = "1"
regex = "1"
resvg = "0.41"
semver = "1.0"
serde = { version = "1", features = [ "derive" ] }
serde-value = "0.7"
serde_json = { version = "1", features = [ "preserve_order" ] }
shared_child = "1"
strsim = "0.11"
sublime_fuzzy = "0.7"
tar = "0.4"
tauri-utils = { path = "../crates/tauri-utils", features = [ "isolation", "schema", "config-json5", "config-toml" ] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = [ "macros", "sync" ] }
toml = "0.8"
toml_edit = { version = "0.22", features = [ "serde" ] }
unicode-width = "0.1"
ureq = { version = "2", default-features = false, features = [ "gzip" ] }
url = { version = "2", features = [ "serde" ] }
walkdir = "2"
zeroize = "1"
zip = "0.6"

[target."cfg(windows)".dependencies]
cc = "1"
winapi = { version = "0.3", features = [ "handleapi", "processenv", "winbase", "wincon", "winnt" ] }

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
plist = "1"

[features]
default = [ "rustls" ]
native-tls = [
  "cargo-mobile2/native-tls",
  "ureq/native-tls"
]
native-tls-vendored = [ "native-tls" ]
rustls = [ "cargo-mobile2/rustls", "ureq/tls" ]
